logs/qi.jwmedia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qi'...
Listing './lib/python3.5/site-packages/qi/jwMedia'...
Listing './lib/python3.5/site-packages/qi/jwMedia/blobadapters'...
Listing './lib/python3.5/site-packages/qi/jwMedia/browser'...
Listing './lib/python3.5/site-packages/qi/jwMedia/browser/resources'...
Listing './lib/python3.5/site-packages/qi/jwMedia/content'...
Compiling './lib/python3.5/site-packages/qi/jwMedia/content/video.py'...
***   File "./lib/python3.5/site-packages/qi/jwMedia/content/video.py", line 136
    except Exception,Detail:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qi/jwMedia/kss'...
Listing './lib/python3.5/site-packages/qi/jwMedia/kss/javascript'...
Listing './lib/python3.5/site-packages/qi/jwMedia/locales'...
Listing './lib/python3.5/site-packages/qi/jwMedia/locales/el'...
Listing './lib/python3.5/site-packages/qi/jwMedia/locales/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/qi/jwMedia/locales/en'...
Listing './lib/python3.5/site-packages/qi/jwMedia/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/qi/jwMedia/portlets'...
Listing './lib/python3.5/site-packages/qi/jwMedia/profiles'...
Listing './lib/python3.5/site-packages/qi/jwMedia/profiles/default'...
Listing './lib/python3.5/site-packages/qi/jwMedia/profiles/default/types'...
Listing './lib/python3.5/site-packages/qi/jwMedia/tests'...
Listing './lib/python3.5/site-packages/qi/jwMedia/tests/data'...
Listing './lib/python3.5/site-packages/qi.jwMedia-0.5b3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
